# media-programming

./: main.py  pyproject.toml
week2/: SoundProcessing1.ipynb  SoundProcessing2.ipynb  SoundProcessing3.ipynb  SoundProcessing4.ipynb  SoundProcessing5.ipynb  mp_ex2.ipynb
week2/notes/: mp_ex2.md  soundprocessing1.md  soundprocessing2.md  soundprocessing3.md  soundprocessing4.md  soundprocessing5.md
week3/: TextProcessing1.ipynb  TextProcessing2.ipynb  TextProcessing3.ipynb  mp_ex3_new.ipynb
week3/notes/: mp_ex3.md  textprocessing1.md  textprocessing2.md  textprocessing3.md
week4/: TopicAnalysis1.ipynb  TopicAnalysis2.ipynb  TopicAnalysis3.ipynb  TopicAnalysis4.ipynb  mp_ex4.ipynb
week4/notes/: mp_ex4.md  topicanalysis1.md  topicanalysis2.md  topicanalysis3.md  topicanalysis4.md
