[project]
name = "media-programming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "janome>=0.5.0",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "openai-whisper>=20250625",
    "wordcloud>=1.9.6",
]
