[project]
name = "media-programming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fugashi>=1.5.2",
    "gensim>=4.4.0",
    "ipadic>=1.0.0",
    "ipykernel>=7.3.0",
    "janome>=0.5.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "openai-whisper>=20250625",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.9.0",
    "sentencepiece>=0.2.1",
    "transformers>=5.12.1",
    "unidic-lite>=1.0.8",
    "wordcloud>=1.9.6",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
]
